--- a/index.html
+++ b/index.html
@@ -12,7 +12,15 @@
 
   <body>
 
-    <h1>Twitter Bootstrap 2 Review</h1>
+    <div class="hero-unit">
+
+       <h1>Twitter Bootstrap 2 Review</h1>
+
+       <p>This is a hero unit, built with <em>bootstrap.css</em></p>
+
+       <p><a class="btn btn-primary btn-large">Look, Kyi. A Button!</a></p>
+
+    </div>
 
   </body>
 
